app.yaml
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: ImageStream
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: blog
    name: blog
  spec:
    lookupPolicy:
      local: false
- apiVersion: v1
  kind: BuildConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: blog
    name: blog
  spec:
    nodeSelector: null
    output:
      to:
        kind: ImageStreamTag
        name: blog:latest
    postCommit: {}
    resources: {}
    source:
      git:
        uri: https://github.com/frcah/test_2.git
      type: Git
    strategy:
      sourceStrategy:
        from:
          kind: ImageStreamTag
          name: php:7.0
          namespace: openshift
      type: Source
    triggers:
    - github:
        secret: qL1HtwqhS6u09b5f0nfB
      type: GitHub
    - generic:
        secret: LlaNA1BmlbUy1t3zxZRo
      type: Generic
    - type: ConfigChange
    - imageChange: {}
      type: ImageChange
- apiVersion: v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: blog
    name: blog
  spec:
    replicas: 1
    selector:
      app: blog
      deploymentconfig: blog
    strategy:
      type: Recreate
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          app: blog
          deploymentconfig: blog
      spec:
        containers:
        - env:
          - name: MYSQL_DATABASE
            value: wp
          - name: MYSQL_PASSWORD
            value: wp
          - name: MYSQL_SERVICE
            value: blog
          - name: MYSQL_USER
            value: wp
          image: blog:latest
          name: blog
          ports:
          - containerPort: 8080
            protocol: TCP
          resources: {}
          volumeMounts:
            - mountPath: /opt/app-root/src/wp
              name: volume-mydisk
              subPath: wp
        - env:
          - name: MYSQL_DATABASE
            value: wp
          - name: MYSQL_PASSWORD
            value: wp
          - name: MYSQL_SERVICE
            value: blog
          - name: MYSQL_USER
            value: wp
          image: docker-registry.default.svc:5000/openshift/mysql:5.7
          name: mysql
          ports:
          - containerPort: 3306
            protocol: TCP
          resources: {}
          volumeMounts:
          - mountPath: /var/lib/mysql/data
            name: volume-mydisk
            subPath: mysql
        volumes:
          - name: volume-mydisk
            persistentVolumeClaim:
                claimName: mydisk
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - blog
        from:
          kind: ImageStreamTag
          name: blog:latest
      type: ImageChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - mysql
        from:
          kind: ImageStreamTag
          name: mysql:5.7
          namespace: openshift
      type: ImageChange
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: blog
    name: blog
  spec:
    ports:
    - name: 3306-tcp
      port: 3306
      protocol: TCP
      targetPort: 3306
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: blog
      deploymentconfig: blog
